Finished content part of the page

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,31 +32,46 @@
         </div>
       </div>
       <div id="content">
-        <h1>MANGA</h1>
-        <div class="content_info">
-          <h3>1999</h3>
-          <h3>72 volumes</h3>
-          <h3>Masashi Kishimoto</h3>
+        <div id="content_info">
+          <h1>MANGA</h1>
+          <div class="content_quick_info">
+            <h3>1999</h3>
+            <h3>72 volumes</h3>
+            <h3>Masashi Kishimoto</h3>
+          </div>
+          <div class="content_full">
+            <p>
+              Naruto is a Japanese
+              <a href="https://en.wikipedia.org/wiki/Manga" target="_blank"
+                >manga</a
+              >
+              series written and illustrated by Masashi Kishimoto. It tells the
+              story of Naruto Uzumaki, a young ninja who seeks recognition from
+              his peers and dreams of becoming the Hokage, the leader of his
+              village. The story is told in two parts - the first set in
+              Naruto's pre-teen years, and the second in his teens. The series
+              is based on two one-shot manga by Kishimoto: Karakuri (1995),
+              which earned Kishimoto an honorable mention in Shueisha's monthly
+              Hop Step Award the following year, and Naruto (1997). Naruto was
+              serialized in Shueisha's magazine, Weekly Shōnen Jump from 1999 to
+              2014, and released in tankōbon (book) form in 72 volumes.
+            </p>
+          </div>
         </div>
-        <div class="content_body">
-          <p>
-            Naruto is a Japanese
-            <a href="https://en.wikipedia.org/wiki/Manga" target="_blank"
-              >manga</a
-            >
-            series written and illustrated by Masashi Kishimoto. It tells the
-            story of Naruto Uzumaki, a young ninja who seeks recognition from
-            his peers and dreams of becoming the Hokage, the leader of his
-            village. The story is told in two parts - the first set in Naruto's
-            pre-teen years, and the second in his teens. The series is based on
-            two one-shot manga by Kishimoto: Karakuri (1995), which earned
-            Kishimoto an honorable mention in Shueisha's monthly Hop Step Award
-            the following year, and Naruto (1997). Naruto was serialized in
-            Shueisha's magazine, Weekly Shōnen Jump from 1999 to 2014, and
-            released in tankōbon (book) form in 72 volumes.
-          </p>
+        <div id="container">
+          <img
+            id="img1"
+            src="/pictures/manga_page.jpg"
+            alt="Manga page"
+            style="max-height: 400px"
+          />
+          <img
+            id="img2"
+            src="/pictures/manga_cover.jpg"
+            alt="Manga cover page"
+            style="max-height: 400px"
+          />
         </div>
-        <img src="/pictures/manga_page.jpg" alt="Manga page" />
       </div>
     </div>
   </body>
