Finished best volumes section, whole manga page is implemented

--- a/pages/index.html
+++ b/pages/index.html
@@ -73,6 +73,55 @@
           />
         </div>
       </div>
+      <div id="additional">
+        <h1>BEST RATED VOLUMES</h1>
+        <div id="additional_row">
+          <div class="volume_info">
+            <a
+              href="https://naruto.fandom.com/wiki/The_One_Who_Knows_the_Truth_(volume)"
+              target="_blank"
+              ><img
+                class="volume_img"
+                src="/pictures/top_volume1.avif"
+                alt="Top volume"
+            /></a>
+            <p class="volume_title">The One Who Knows The Thruth (Volume 43)</p>
+          </div>
+          <div class="volume_info">
+            <a
+              href="https://naruto.fandom.com/wiki/Desiring_Apprenticeship%3F!_(volume)"
+              target="_blank"
+              ><img
+                class="volume_img"
+                src="/pictures/top_volume2.avif"
+                alt="Top volume"
+            /></a>
+            <p class="volume_title">Desiring Apprenticeship?! (Volume 11)</p>
+          </div>
+          <div class="volume_info">
+            <a
+              href="https://naruto.fandom.com/wiki/Neji_and_Hinata_(volume)"
+              target="_blank"
+              ><img
+                class="volume_img"
+                src="/pictures/top_volume3.avif"
+                alt="Top volume"
+            /></a>
+            <p class="volume_title">Neji and Hinata (Volume 9)</p>
+          </div>
+          <div class="volume_info">
+            <a
+              href="https://naruto.fandom.com/wiki/The_Challengers!!_(volume)"
+              target="_blank"
+              ><img
+                class="volume_img"
+                src="/pictures/top_volume4.avif"
+                alt="Top volume"
+            /></a>
+            <p class="volume_title">The Challengers!! (Volume 5)</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
