Startted implementing TV Series page

--- a/pages/tvSeries.html
+++ b/pages/tvSeries.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="/styles/tvSeries.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,11 +18,11 @@
       <div id="navigation_row">
         <img id="logo" src="/pictures/naruto_logo.png" alt="logo" />
         <div id="navigation_items">
-          <a href="index.html" class="navigation_item" id="nav_current"
-            >MANGA</a
+          <a href="index.html" class="navigation_item">MANGA</a>
+          <a href="tvSeries.html" class="navigation_item" id="nav_current"
+            >TV SERIES</a
           >
-          <a href="/pages/tvSeries.html" class="navigation_item">TV SERIES</a>
-          <a href="" class="navigation_item">MOVIES</a>
+          <a href="movies.html" class="navigation_item">MOVIES</a>
           <a
             href="https://naruto.fandom.com/wiki/Narutopedia"
             target="_blank"
@@ -32,49 +32,15 @@
         </div>
       </div>
       <div id="content">
-        <div id="content_info">
-          <h1>MANGA</h1>
-          <div class="content_quick_info">
-            <h3>1999</h3>
-            <h3>72 volumes</h3>
-            <h3>Masashi Kishimoto</h3>
+        <h1>TV SERIES</h1>
+        <div class="content_item">
+          <div class="item_title&overview">
+            <h2>Naruto</h2>
           </div>
-          <div class="content_full">
-            <p>
-              Naruto is a Japanese
-              <a href="https://en.wikipedia.org/wiki/Manga" target="_blank"
-                >manga</a
-              >
-              series written and illustrated by Masashi Kishimoto. It tells the
-              story of Naruto Uzumaki, a young ninja who seeks recognition from
-              his peers and dreams of becoming the Hokage, the leader of his
-              village. The story is told in two parts - the first set in
-              Naruto's pre-teen years, and the second in his teens. The series
-              is based on two one-shot manga by Kishimoto: Karakuri (1995),
-              which earned Kishimoto an honorable mention in Shueisha's monthly
-              Hop Step Award the following year, and Naruto (1997). Naruto was
-              serialized in Shueisha's magazine, Weekly Shōnen Jump from 1999 to
-              2014, and released in tankōbon (book) form in 72 volumes.
-            </p>
-          </div>
-        </div>
-        <div id="container">
-          <img
-            id="img1"
-            src="/pictures/manga_page.jpg"
-            alt="Manga page"
-            style="max-height: 400px"
-          />
-          <img
-            id="img2"
-            src="/pictures/manga_cover.jpg"
-            alt="Manga cover page"
-            style="max-height: 400px"
-          />
         </div>
       </div>
       <div id="additional">
-        <h1>BEST RATED VOLUMES</h1>
+        <h1>MOST WATCHED EPISODES</h1>
         <div id="additional_row">
           <div class="volume_info">
             <a
