Finished TV Series page

--- a/pages/tvSeries.html
+++ b/pages/tvSeries.html
@@ -32,59 +32,133 @@
         </div>
       </div>
       <div id="content">
-        <h1>TV SERIES</h1>
-        <div class="content_item">
-          <div class="item_title&overview">
-            <h2>Naruto</h2>
+        <h1 id="content_title">TV SERIES</h1>
+        <a
+          href="https://www.hulu.com/series/naruto-993d48dc-d507-47cb-8cca-23e6794f6f66"
+          target="_blank"
+          class="content_link"
+          ><div class="content_item">
+            <div class="item_title_info">
+              <h2 class="item_title">Naruto</h2>
+              <div class="content_quick_info">
+                <h3>2003 - 2007</h3>
+                <h3>220 episodes</h3>
+                <h3>8.4 / 10</h3>
+              </div>
+              <p class="content_item_p">
+                Many years ago, in the hidden village of Konoha, lived a great
+                demon fox. When it swung one of it's nine tails, a tsunami
+                occurred. The fourth hokage sealed this demon fox inside a boy
+                in exchange for his own life. Naruto was that boy, and he grew
+                up with no family, and the villagers hated him thinking that he
+                himself was the demon fox. Naruto's dream is to become Hokage,
+                and have the villagers acknowledge him.
+              </p>
+            </div>
+            <img
+              src="/pictures/naruto_tv.webp"
+              alt="Naruto tv series cover"
+              class="content_item_image"
+            /></div
+        ></a>
+        <a
+          href="https://www.hulu.com/series/naruto-993d48dc-d507-47cb-8cca-23e6794f6f66"
+          target="_blank"
+          class="content_link"
+          ><div class="content_item">
+            <div class="item_title_info">
+              <h2 class="item_title">Naruto: Shippuden</h2>
+              <div class="content_quick_info">
+                <h3>2007 - 2017</h3>
+                <h3>500 episodes</h3>
+                <h3>8.7 / 10</h3>
+              </div>
+              <p class="content_item_p">
+                Naruto Uzumaki wants to be the best ninja in the land. He's done
+                well so far, but with the looming danger posed by the mysterious
+                Akatsuki organization, Naruto knows he must train harder than
+                ever and leaves his village for intense exercises that will push
+                him to his limits.
+              </p>
+            </div>
+            <img
+              src="/pictures/naruto_shippuden_tv3.jpg"
+              alt="Naruto tv series cover"
+              class="content_item_image"
+            /></div
+        ></a>
+    </a>
+    <a
+      href="https://www.hulu.com/series/boruto-naruto-next-generations-e567be4f-2fd8-4127-bc08-580baad908e3"
+      target="_blank"
+      class="content_link"
+      ><div class="content_item">
+        <div class="item_title_info">
+          <h2 class="item_title">Boruto: Naruto Next Generations</h2>
+          <div class="content_quick_info">
+            <h3>2017 - current</h3>
+            <h3>286 episodes</h3>
+            <h3>6.7 / 10</h3>
           </div>
+          <p class="content_item_p">
+            Naruto was a young shinobi with an incorrigible knack for mischief. 
+            He achieved his dream to become the greatest ninja in the village and his face sits atop the Hokage Monument. 
+            But this is not his story. A new generation of ninja are ready to take the stage, led by Naruto's own son, Boruto.
+          </p>
         </div>
+        <img
+          src="/pictures/boruto_tv3.jpg"
+          alt="Naruto tv series cover"
+          class="content_item_image"
+        /></div
+    ></a>
       </div>
       <div id="additional">
-        <h1>MOST WATCHED EPISODES</h1>
+        <h1>BEST RATED EPISODES</h1>
         <div id="additional_row">
-          <div class="volume_info">
+          <div class="episode_info">
             <a
-              href="https://naruto.fandom.com/wiki/The_One_Who_Knows_the_Truth_(volume)"
+              href="https://naruto.fandom.com/wiki/The_Tale_of_Jiraiya_the_Gallant_(episode)"
               target="_blank"
               ><img
-                class="volume_img"
-                src="/pictures/top_volume1.avif"
-                alt="Top volume"
+                class="episode_img"
+                src="/pictures/top_episode1.avif"
+                alt="Top episode"
             /></a>
-            <p class="volume_title">The One Who Knows The Thruth (Volume 43)</p>
+            <p class="episode_title">The Tale Of Jiraiya The Gallant (Episode 133)</p>
           </div>
-          <div class="volume_info">
+          <div class="episode_info">
             <a
-              href="https://naruto.fandom.com/wiki/Desiring_Apprenticeship%3F!_(volume)"
+              href="https://naruto.fandom.com/wiki/Naruto_and_Sasuke"
               target="_blank"
               ><img
-                class="volume_img"
-                src="/pictures/top_volume2.avif"
-                alt="Top volume"
+                class="episode_img"
+                src="/pictures/top_episode2.avif"
+                alt="Top episode"
             /></a>
-            <p class="volume_title">Desiring Apprenticeship?! (Volume 11)</p>
+            <p class="episode_title">Naruto And Sasuke (Episode 477)</p>
           </div>
-          <div class="volume_info">
+          <div class="episode_info">
             <a
-              href="https://naruto.fandom.com/wiki/Neji_and_Hinata_(volume)"
+              href="https://naruto.fandom.com/wiki/Kakashi_vs._Obito"
               target="_blank"
               ><img
-                class="volume_img"
-                src="/pictures/top_volume3.avif"
-                alt="Top volume"
+                class="episode_img"
+                src="/pictures/top_episode3.avif"
+                alt="Top episode"
             /></a>
-            <p class="volume_title">Neji and Hinata (Volume 9)</p>
+            <p class="episode_title">Kakashi Vs. Obito (Episode 375)</p>
           </div>
-          <div class="volume_info">
+          <div class="episode_info">
             <a
-              href="https://naruto.fandom.com/wiki/The_Challengers!!_(volume)"
+              href="https://naruto.fandom.com/wiki/Thank_You_(episode)"
               target="_blank"
               ><img
-                class="volume_img"
-                src="/pictures/top_volume4.avif"
-                alt="Top volume"
+                class="episode_img"
+                src="/pictures/top_episode4.avif"
+                alt="Top episode"
             /></a>
-            <p class="volume_title">The Challengers!! (Volume 5)</p>
+            <p class="episode_title">Thank You (Episode 249)</p>
           </div>
         </div>
       </div>
