Added footer to both pages

--- a/pages/tvSeries.html
+++ b/pages/tvSeries.html
@@ -162,5 +162,30 @@
         </div>
       </div>
     </div>
+    <div id="footer">
+      <div class="footer_item">
+        <p class="footer_item_title">Made by:</p>
+        <p>Ivan Svalina</p>
+        <div class="footer_item_row">
+          <p>Student at </p>
+          <a href="https://www.ferit.unios.hr/" target="_blank"><img src="/pictures/ferit.png" alt="github icoc" style="height: 30px; margin-left: 5px; margin-top: 5px;"></a>
+        </div>
+      </div>
+      <div class="footer_item">
+        <p class="footer_item_title">Contact:</p>
+        <div class="footer_item_row">
+          <a href="https://github.com/Svale09" target="_blank">GitHub</a>
+          <img src="/pictures/icons8-github-30.png" alt="github icoc" style="height: 30px; margin-left: 5px;">
+        </div>
+        <div class="footer_item_row">
+          <a href="https://www.linkedin.com/in/ivansvalina0908/" target="_blank">LinkedIn</a>
+          <img src="/pictures/linkedIN.png" alt="github icoc" style="height: 30px; margin-left: 5px;">
+        </div>
+        <div class="footer_item_row">
+          <p>svalinaivan09@gmail.com</p>
+          <img src="/pictures/icons8-mail-30.png" alt="github icoc" style="height: 30px; margin-left: 8px;">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
