Added icon to TV Series page

--- a/pages/tvSeries.html
+++ b/pages/tvSeries.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NarutoWEB</title>
+    <link rel="icon" href="/pictures/naruto_logo.png">
     <link rel="stylesheet" href="/styles/tvSeries.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
